[package]
name = "word_games"
version = "0.1.0"
authors = ["David Thureson <David.G.Thureson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../../utility/util" }
rand = "0.8.3"
itertools = "0.9.0"
